@@ -1,7 +1,7 @@
 import com.mongodb.MongoClient;
 import com.mongodb.client.MongoCollection;
 import com.svd.ClientHandler;
-import com.svd.dao.BaseDao;
+import com.svd.dao.MongoDao;
 import de.flapdoodle.embed.mongo.MongodExecutable;
 import de.flapdoodle.embed.mongo.MongodProcess;
 import de.flapdoodle.embed.mongo.MongodStarter;
@@ -20,8 +20,6 @@ import org.junit.Test;
 import refinedDataModels.*;
 
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -37,7 +35,7 @@ public class DaoIntegrationTest {
 
     private MongodExecutable mongodExe;
     private MongodProcess mongod;
-    private BaseDao mongoDao;
+    private MongoDao mongoDao;
     private String hostname = "127.0.0.1";
     private int port = 12345;
 
@@ -53,7 +51,7 @@ public class DaoIntegrationTest {
         mongodExe = starter.prepare(mongodConfig);
         mongod = mongodExe.start();
         MongoClient mongoClient = new MongoClient(hostname, port);
-        mongoDao = new BaseDao<>(new ClientHandler(hostname, port, DATABASE_NAME));
+        mongoDao = new MongoDao<>(new ClientHandler(hostname, port, DATABASE_NAME));
     }
 
     @After
@@ -64,87 +62,66 @@ public class DaoIntegrationTest {
         }
     }
 
-    private void saveExampleAlbumToDatabase(MongoCollection<Document> mongoCollection) {
-        RefinedAlbum exampleAlbum = new RefinedAlbum();
-        try {
-            exampleAlbum = RefinedAlbum.builder()
-                    .id("6fpZzsdzd04nqiDPWnF2iw")
-                    .name("All I Need (Deluxe Version)")
-                    .artistsIds(Collections.singletonList("7qRll6DYV06u2VuRPAVqug"))
-                    .trackIds(new ArrayList<String>(Arrays.asList(
-                            "4GKmx23LpQNXkamXDoZyFE", "08pOoVfZ8BsLCfXxRsci2Y", "72nV5T9HAbKc1sLka9NF6x",
-                            "69Q9unT80s08dUolhcgr4T", "5bLgPkbqC97jVe6rJlpzLJ", "7b63AiSD37IYRJBrEQcfdR",
-                            "6iudA5joUv7hmPQYFIVEB5", "2SjYwtyKUTQQ8WoxX8uX9w", "1621HusJy3pKPrynU8nmB3",
-                            "3eDIItHQg5S69tfVR12RYh", "5gLCxvVic5y7PBLDzBsgmd", "63jqw4EEcCxUIqJm4514ZB",
-                            "2umo57mtmQOEoCza8OncR0", "1puaMbxVMGdZnPTk1rq19X", "1puaMbxVMGdZnPTk1rq19X",
-                            "27oi5r6fj4aPcV86Z40Wrm")))
-                    .imageURL(new URL("https://i.scdn.co/image/fb49d9c64b1e8b2af45498ad23603a749cd1b177"))
-                    .releaseDate(new Date(1454630400000L))
-                    .popularity(61)
-                    .externalURL(new URL("https://open.spotify.com/album/6fpZzsdzd04nqiDPWnF2iw"))
-                    .href(new URL("https://api.spotify.com/v1/albums/6fpZzsdzd04nqiDPWnF2iw"))
-                    .uri(new URI("spotify:album:6fpZzsdzd04nqiDPWnF2iw"))
-                    .build();
-        } catch (MalformedURLException | URISyntaxException e) {
-            e.printStackTrace();
-        }
-        mongoDao.saveEntryToDatabase(RefinedAlbum.class, exampleAlbum, mongoCollection);
+    private void saveExampleAlbumToDatabase(MongoCollection<Document> mongoCollection) throws MalformedURLException {
+        RefinedAlbum exampleAlbum = RefinedAlbum.builder()
+                .id("6fpZzsdzd04nqiDPWnF2iw")
+                .name("All I Need (Deluxe Version)")
+                .artistsIds(Collections.singletonList("7qRll6DYV06u2VuRPAVqug"))
+                .trackIds(new ArrayList<String>(Arrays.asList(
+                        "4GKmx23LpQNXkamXDoZyFE", "08pOoVfZ8BsLCfXxRsci2Y", "72nV5T9HAbKc1sLka9NF6x",
+                        "69Q9unT80s08dUolhcgr4T", "5bLgPkbqC97jVe6rJlpzLJ", "7b63AiSD37IYRJBrEQcfdR",
+                        "6iudA5joUv7hmPQYFIVEB5", "2SjYwtyKUTQQ8WoxX8uX9w", "1621HusJy3pKPrynU8nmB3",
+                        "3eDIItHQg5S69tfVR12RYh", "5gLCxvVic5y7PBLDzBsgmd", "63jqw4EEcCxUIqJm4514ZB",
+                        "2umo57mtmQOEoCza8OncR0", "1puaMbxVMGdZnPTk1rq19X", "1puaMbxVMGdZnPTk1rq19X",
+                        "27oi5r6fj4aPcV86Z40Wrm")))
+                .imageURL(new URL("https://i.scdn.co/image/fb49d9c64b1e8b2af45498ad23603a749cd1b177"))
+                .releaseDate(new Date(1454630400000L))
+                .popularity(61)
+                .externalURL(new URL("https://open.spotify.com/album/6fpZzsdzd04nqiDPWnF2iw"))
+                .href(new URL("https://api.spotify.com/v1/albums/6fpZzsdzd04nqiDPWnF2iw"))
+                .spotifyURI("spotify:album:6fpZzsdzd04nqiDPWnF2iw")
+                .build();
 
+        mongoDao.saveEntryToDatabase(RefinedAlbum.class, exampleAlbum, mongoCollection);
     }
 
-    private void saveExampleTrackToDatabase(MongoCollection<Document> mongoCollection) {
-        RefinedTrack exampleTrack = new RefinedTrack();
-        try {
-            exampleTrack = RefinedTrack.builder()
-                    .id("3aTrurxagDJfsQRBEOGfMb")
-                    .refinedAlbumIds(Collections.singletonList("24BRvmlDhVhjTJsqazdVxm"))
-                    .refinedArtistIds(Collections.singletonList("4yvcSjfu4PC0CYQyLy4wSq"))
-                    .discNum(1)
-                    .durationMs(320654)
-                    .explicit(true)
-                    .externalURL(new URL("https://open.spotify.com/track/3aTrurxagDJfsQRBEOGfMb"))
-                    .href(new URL("https://api.spotify.com/v1/tracks/3aTrurxagDJfsQRBEOGfMb"))
-                    .name("The Other Side Of Paradise")
-                    .previewURL(new URL("https://p.scdn.co/mp3-preview/228a01d80735cc6f137f1a54c5b28122aa03123e?cid=8897482848704f2a8f8d7c79726a70d4"))
-                    .trackNumber(8)
-                    .popularity(60)
-                    .uri(URI.create("spotify:track:3aTrurxagDJfsQRBEOGfMb"))
-                    .build();
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-        }
+    private void saveExampleTrackToDatabase(MongoCollection<Document> mongoCollection) throws MalformedURLException {
+        RefinedTrack exampleTrack = RefinedTrack.builder()
+                .id("3aTrurxagDJfsQRBEOGfMb")
+                .albumId("24BRvmlDhVhjTJsqazdVxm")
+                .artistIds(Collections.singletonList("4yvcSjfu4PC0CYQyLy4wSq"))
+                .discNum(1)
+                .durationMs(320654)
+                .explicit(true)
+                .externalURL(new URL("https://open.spotify.com/track/3aTrurxagDJfsQRBEOGfMb"))
+                .href(new URL("https://api.spotify.com/v1/tracks/3aTrurxagDJfsQRBEOGfMb"))
+                .name("The Other Side Of Paradise")
+                .previewURL(new URL("https://p.scdn.co/mp3-preview/228a01d80735cc6f137f1a54c5b28122aa03123e?cid=8897482848704f2a8f8d7c79726a70d4"))
+                .trackNumber(8)
+                .popularity(60)
+                .spotifyURI("spotify:track:3aTrurxagDJfsQRBEOGfMb")
+                .build();
+
         mongoDao.saveEntryToDatabase(RefinedTrack.class, exampleTrack, mongoCollection);
     }
 
-    private void saveExampleArtistToDatabase(MongoCollection<Document> mongoCollection) {
-        RefinedArtist exampleArtist = new RefinedArtist();
-        try {
-            exampleArtist = RefinedArtist.builder()
+    private void saveExampleArtistToDatabase(MongoCollection<Document> mongoCollection) throws MalformedURLException {
+        RefinedArtist exampleArtist = RefinedArtist.builder()
                     .id("5cIc3SBFuBLVxJz58W2tU9")
                     .externalURL(new URL("https://open.spotify.com/artist/5cIc3SBFuBLVxJz58W2tU9"))
-                    .genres(new ArrayList<String>(Arrays.asList("indie poptimism", "indie r&b")))
-                    .refinedAlbumIds(new ArrayList<String>(Arrays.asList(
-                            "0zicd2mBV8HTzSubByj4vP", "562fzRzo7acnqGXGuty2az", "2x7GLQ1X785XAamwhzJUJG", "74mKRJaNS5PWUADvFJS7ji",
-                            "733e1ZfktLSwj96X5rsMeE", "2wGl54RF5pLv212S4bEXtT", "2wqFdb5lFQVGiNP7kUETnC", "1Y5DV3pPPLmpClvFw8Dtcj",
-                            "5GXrievxdXgabSPY9gVq5J", "6EH6qQ516EF4NUEl6FsWit", "6x8tzop53PDl2tvjIXB9a0", "7FJANHeAa8sEWVFio0evWX",
-                            "1lpTHlvDpmR1LDE0ru6Cth", "4LA0h9eDJKoKfwiDWxGlFM", "4wl4BQZQocAFjggJ4nN70H", "0Z3ZIqbi57Xi9bEfL5JWQk",
-                            "6dUOLPzICJ8Ap9hdY28AnA")))
+                    .genres(new ArrayList<>(Arrays.asList("indie poptimism", "indie r&b")))
                     .href(new URL("https://api.spotify.com/v1/artists/5cIc3SBFuBLVxJz58W2tU9"))
                     .name("Oh Wonder")
                     .followers(615216)
                     .popularity(78)
-                    .uri(new URI("spotify:artist:5cIc3SBFuBLVxJz58W2tU9"))
+                    .spotifyURI("spotify:artist:5cIc3SBFuBLVxJz58W2tU9")
                     .build();
-        } catch (MalformedURLException | URISyntaxException e) {
-            e.printStackTrace();
-        }
+
         mongoDao.saveEntryToDatabase(RefinedArtist.class, exampleArtist, mongoCollection);
     }
 
-    private void saveExamplePlaylistToDatabase(MongoCollection<Document> mongoCollection) {
-        RefinedPlaylist examplePlaylist = new RefinedPlaylist();
-        try {
-            examplePlaylist = RefinedPlaylist.builder()
+    private void saveExamplePlaylistToDatabase(MongoCollection<Document> mongoCollection) throws MalformedURLException {
+        RefinedPlaylist examplePlaylist = RefinedPlaylist.builder()
                     .id("2CTdEa3JWbncC1h8WjnuxZ")
                     .externalURL(new URL("https://open.spotify.com/user/millersinc"))
                     .numOfFollowers(0)
@@ -152,48 +129,40 @@ public class DaoIntegrationTest {
                     .imageURL(new URL("https://pl.scdn.co/images/pl/default/27eee5eb5ba85317586d3af6709bcebfc8525d83"))
                     .name("SPS Test playlist")
                     .description("&lt;Test&gt;")
-                    .refinedUserId("millersinc")
-                    .refinedTrackIds(new ArrayList<String>(Arrays.asList(
+                    .userId("millersinc")
+                    .trackIds(new ArrayList<String>(Arrays.asList(
                             "5V3ZQQtWehePZs2ztZvyAi", "2T5cJy6jrHaciEUExBvxs8", "5dKyZWlgjWw1oJgLa4GCZD",
                             "5owRsFtcu8vxXYHvNyqdRr", "5aAx2yezTd8zXrkmtKl66Z")))
-                    .uri(new URI("spotify:user:millersinc"))
+                    .spotifyURI("spotify:user:millersinc")
                     .build();
-        } catch (MalformedURLException | URISyntaxException e) {
-            e.printStackTrace();
-        }
+
         mongoDao.saveEntryToDatabase(RefinedPlaylist.class, examplePlaylist, mongoCollection);
     }
 
-    private void saveExampleUserToDatabase(MongoCollection<Document> mongoCollection) {
-        RefinedUser exampleUser = new RefinedUser();
-        try {
-            exampleUser = RefinedUser.builder()
+    private void saveExampleUserToDatabase(MongoCollection<Document> mongoCollection) throws MalformedURLException {
+        RefinedUser exampleUser = RefinedUser.builder()
                     .id("spotify")
                     .displayName("Spotify")
                     .externalURL(new URL("https://open.spotify.com/user/spotify"))
                     .numOfFollowers(7715336)
                     .href(new URL("https://api.spotify.com/v1/users/spotify"))
                     .imageURL(new URL("https://profile-images.scdn.co/images/userprofile/default/3c93d52857ecf3e40c4e8435adb7f9c1da40a0dd"))
-                    .uri(new URI("spotify:user:spotify"))
+                    .spotifyURI("spotify:user:spotify")
                     .build();
-        } catch (MalformedURLException | URISyntaxException e) {
-            e.printStackTrace();
-        }
+
         mongoDao.saveEntryToDatabase(RefinedUser.class, exampleUser, mongoCollection);
     }
 
     @Test
-    public void shouldSaveAlbumToDb() {
+    public void shouldSaveAlbumToDb() throws MalformedURLException {
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedAlbums");
         saveExampleAlbumToDatabase(mongoCollection);
         assertThat(mongoCollection.count(), Matchers.is(1L));
     }
 
     @Test
-    public void shouldReadSavedAlbumFromDb() {
-        RefinedAlbum expectedAlbum = new RefinedAlbum();
-        try {
-            expectedAlbum = RefinedAlbum.builder()
+    public void shouldReadSavedAlbumFromDb() throws MalformedURLException {
+        RefinedAlbum expectedAlbum = RefinedAlbum.builder()
                     .id("6fpZzsdzd04nqiDPWnF2iw")
                     .name("All I Need (Deluxe Version)")
                     .artistsIds(Collections.singletonList("7qRll6DYV06u2VuRPAVqug"))
@@ -209,11 +178,9 @@ public class DaoIntegrationTest {
                     .popularity(61)
                     .externalURL(new URL("https://open.spotify.com/album/6fpZzsdzd04nqiDPWnF2iw"))
                     .href(new URL("https://api.spotify.com/v1/albums/6fpZzsdzd04nqiDPWnF2iw"))
-                    .uri(new URI("spotify:album:6fpZzsdzd04nqiDPWnF2iw"))
+                    .spotifyURI("spotify:album:6fpZzsdzd04nqiDPWnF2iw")
                     .build();
-        } catch (MalformedURLException | URISyntaxException e) {
-            e.printStackTrace();
-        }
+
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedAlbums");
         saveExampleAlbumToDatabase(mongoCollection);
         Object object = mongoDao.retrieveEntryById("6fpZzsdzd04nqiDPWnF2iw", "RefinedAlbums");
@@ -222,20 +189,18 @@ public class DaoIntegrationTest {
     }
 
     @Test
-    public void shouldSaveTrackToDb() {
+    public void shouldSaveTrackToDb() throws MalformedURLException {
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedTracks");
         saveExampleTrackToDatabase(mongoCollection);
         assertThat(mongoCollection.count(), Matchers.is(1L));
     }
 
     @Test
-    public void shouldReadSavedTrackFromDb() {
-        RefinedTrack expectedSong = new RefinedTrack();
-        try {
-            expectedSong = RefinedTrack.builder()
+    public void shouldReadSavedTrackFromDb() throws MalformedURLException {
+        RefinedTrack expectedSong = RefinedTrack.builder()
                     .id("3aTrurxagDJfsQRBEOGfMb")
-                    .refinedAlbumIds(Collections.singletonList("24BRvmlDhVhjTJsqazdVxm"))
-                    .refinedArtistIds(Collections.singletonList("4yvcSjfu4PC0CYQyLy4wSq"))
+                    .albumId("24BRvmlDhVhjTJsqazdVxm")
+                    .artistIds(Collections.singletonList("4yvcSjfu4PC0CYQyLy4wSq"))
                     .discNum(1)
                     .durationMs(320654)
                     .explicit(true)
@@ -245,11 +210,9 @@ public class DaoIntegrationTest {
                     .previewURL(new URL("https://p.scdn.co/mp3-preview/228a01d80735cc6f137f1a54c5b28122aa03123e?cid=8897482848704f2a8f8d7c79726a70d4"))
                     .trackNumber(8)
                     .popularity(60)
-                    .uri(URI.create("spotify:track:3aTrurxagDJfsQRBEOGfMb"))
+                    .spotifyURI("spotify:track:3aTrurxagDJfsQRBEOGfMb")
                     .build();
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-        }
+
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedTracks");
         saveExampleTrackToDatabase(mongoCollection);
         Object object = mongoDao.retrieveEntryById("3aTrurxagDJfsQRBEOGfMb", "RefinedTracks");
@@ -258,35 +221,25 @@ public class DaoIntegrationTest {
     }
 
     @Test
-    public void shouldSaveArtistToDb() {
+    public void shouldSaveArtistToDb() throws MalformedURLException {
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedArtists");
         saveExampleArtistToDatabase(mongoCollection);
         assertThat(mongoCollection.count(), Matchers.is(1L));
     }
 
     @Test
-    public void shouldReadSavedArtistFromDb() {
-        RefinedArtist expectedArtist = new RefinedArtist();
-        try {
-            expectedArtist = RefinedArtist.builder()
+    public void shouldReadSavedArtistFromDb() throws MalformedURLException {
+        RefinedArtist expectedArtist = RefinedArtist.builder()
                     .id("5cIc3SBFuBLVxJz58W2tU9")
                     .externalURL(new URL("https://open.spotify.com/artist/5cIc3SBFuBLVxJz58W2tU9"))
-                    .genres(new ArrayList<String>(Arrays.asList("indie poptimism", "indie r&b")))
-                    .refinedAlbumIds(new ArrayList<String>(Arrays.asList(
-                            "0zicd2mBV8HTzSubByj4vP", "562fzRzo7acnqGXGuty2az", "2x7GLQ1X785XAamwhzJUJG", "74mKRJaNS5PWUADvFJS7ji",
-                            "733e1ZfktLSwj96X5rsMeE", "2wGl54RF5pLv212S4bEXtT", "2wqFdb5lFQVGiNP7kUETnC", "1Y5DV3pPPLmpClvFw8Dtcj",
-                            "5GXrievxdXgabSPY9gVq5J", "6EH6qQ516EF4NUEl6FsWit", "6x8tzop53PDl2tvjIXB9a0", "7FJANHeAa8sEWVFio0evWX",
-                            "1lpTHlvDpmR1LDE0ru6Cth", "4LA0h9eDJKoKfwiDWxGlFM", "4wl4BQZQocAFjggJ4nN70H", "0Z3ZIqbi57Xi9bEfL5JWQk",
-                            "6dUOLPzICJ8Ap9hdY28AnA")))
+                    .genres(new ArrayList<>(Arrays.asList("indie poptimism", "indie r&b")))
                     .href(new URL("https://api.spotify.com/v1/artists/5cIc3SBFuBLVxJz58W2tU9"))
                     .name("Oh Wonder")
                     .followers(615216)
                     .popularity(78)
-                    .uri(new URI("spotify:artist:5cIc3SBFuBLVxJz58W2tU9"))
+                    .spotifyURI("spotify:artist:5cIc3SBFuBLVxJz58W2tU9")
                     .build();
-        } catch (MalformedURLException | URISyntaxException e) {
-            e.printStackTrace();
-        }
+
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedArtists");
         saveExampleArtistToDatabase(mongoCollection);
         Object object = mongoDao.retrieveEntryById("5cIc3SBFuBLVxJz58W2tU9", "RefinedArtists");
@@ -296,17 +249,15 @@ public class DaoIntegrationTest {
     }
 
     @Test
-    public void shouldSavePlaylistToDb() {
+    public void shouldSavePlaylistToDb() throws MalformedURLException {
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedPlaylists");
         saveExamplePlaylistToDatabase(mongoCollection);
         assertThat(mongoCollection.count(), Matchers.is(1L));
     }
 
     @Test
-    public void shouldReadSavedPlaylistFromDb() {
-        RefinedPlaylist expectedPlaylist = new RefinedPlaylist();
-        try {
-            expectedPlaylist = RefinedPlaylist.builder()
+    public void shouldReadSavedPlaylistFromDb() throws MalformedURLException {
+        RefinedPlaylist expectedPlaylist = RefinedPlaylist.builder()
                     .id("2CTdEa3JWbncC1h8WjnuxZ")
                     .externalURL(new URL("https://open.spotify.com/user/millersinc"))
                     .numOfFollowers(0)
@@ -314,15 +265,13 @@ public class DaoIntegrationTest {
                     .imageURL(new URL("https://pl.scdn.co/images/pl/default/27eee5eb5ba85317586d3af6709bcebfc8525d83"))
                     .name("SPS Test playlist")
                     .description("&lt;Test&gt;")
-                    .refinedUserId("millersinc")
-                    .refinedTrackIds(new ArrayList<String>(Arrays.asList(
+                    .userId("millersinc")
+                    .trackIds(new ArrayList<String>(Arrays.asList(
                             "5V3ZQQtWehePZs2ztZvyAi", "2T5cJy6jrHaciEUExBvxs8", "5dKyZWlgjWw1oJgLa4GCZD",
                             "5owRsFtcu8vxXYHvNyqdRr", "5aAx2yezTd8zXrkmtKl66Z")))
-                    .uri(new URI("spotify:user:millersinc"))
+                    .spotifyURI("spotify:user:millersinc")
                     .build();
-        } catch (MalformedURLException | URISyntaxException e) {
-            e.printStackTrace();
-        }
+
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedPlaylists");
         saveExamplePlaylistToDatabase(mongoCollection);
         Object object = mongoDao.retrieveEntryById("2CTdEa3JWbncC1h8WjnuxZ", "RefinedPlaylists");
@@ -331,28 +280,24 @@ public class DaoIntegrationTest {
     }
 
     @Test
-    public void shouldSaveUserToDb() {
+    public void shouldSaveUserToDb() throws MalformedURLException {
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedUser");
         saveExampleUserToDatabase(mongoCollection);
         assertThat(mongoCollection.count(), Matchers.is(1L));
     }
 
     @Test
-    public void shouldReadSavedUserFromDb() {
-        RefinedUser expectedUser = new RefinedUser();
-        try {
-            expectedUser = RefinedUser.builder()
-                    .id("spotify")
-                    .displayName("Spotify")
-                    .externalURL(new URL("https://open.spotify.com/user/spotify"))
-                    .numOfFollowers(7715336)
-                    .href(new URL("https://api.spotify.com/v1/users/spotify"))
-                    .imageURL(new URL("https://profile-images.scdn.co/images/userprofile/default/3c93d52857ecf3e40c4e8435adb7f9c1da40a0dd"))
-                    .uri(new URI("spotify:user:spotify"))
-                    .build();
-        } catch (MalformedURLException | URISyntaxException e) {
-            e.printStackTrace();
-        }
+    public void shouldReadSavedUserFromDb() throws MalformedURLException {
+        RefinedUser expectedUser = RefinedUser.builder()
+                .id("spotify")
+                .displayName("Spotify")
+                .externalURL(new URL("https://open.spotify.com/user/spotify"))
+                .numOfFollowers(7715336)
+                .href(new URL("https://api.spotify.com/v1/users/spotify"))
+                .imageURL(new URL("https://profile-images.scdn.co/images/userprofile/default/3c93d52857ecf3e40c4e8435adb7f9c1da40a0dd"))
+                .spotifyURI("spotify:user:spotify")
+                .build();
+
         MongoCollection<Document> mongoCollection = mongoDao.getClientHandler().getMongoDB().getCollection("RefinedUsers");
         saveExampleUserToDatabase(mongoCollection);
         Object object = mongoDao.retrieveEntryById("spotify", "RefinedUsers");
